--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,12 +3,18 @@ server:
 
 spring:
   application:
-    name: product-service
+    name: product
   datasource:
     username: root
     password: 123456
     url: 'jdbc:mysql://localhost:3306/icommerce'
     initialization-mode: always
+  jpa:
+    show-sql: true
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 
 eureka:
   client:
